# getitdone

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
docs/: implementation.md  single-inflight-pending-wakeup-incident.md
examples/: string_length.rs
src/: caller.rs  config.rs  error.rs  lib.rs  metrics.rs  pool_metrics.rs  storage.rs  trace.rs  worker.rs
src/worker/: expiry.rs
tests/: caller.rs  init.rs  integration_tests.rs  span_linking.rs  storage_indexes.rs  trace.rs
tests/mock_e2e/: Cargo.toml
tests/mock_e2e/src/: common.rs  mock_caller.rs  mock_worker.rs
