[package]
name = "getitdone"
version = "0.2.5"
edition = "2024"
authors = ["Qiao Runtao <qiaoruntao@example.com>"]
description = "Experimenting with a simple Mongo-backed caller/worker bridge that keeps tracing context alive."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qiaoruntao/getitdone"
repository = "https://github.com/qiaoruntao/getitdone"
documentation = "https://docs.rs/getitdone"
keywords = ["mongodb", "worker", "async", "tracing"]
categories = ["asynchronous", "database", "concurrency"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE*", "examples/**/*.rs"]

[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry"
]

[dependencies]
# Core
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
futures-util = "0.3"

# MongoDB & Storage
mongodb = { version = "3", default-features = false, features = ["compat-3-3-0", "bson-3", "rustls-tls", "dns-resolver", "zstd-compression", "snappy-compression", "zlib-compression"] }
bson = { version = "3", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Optional Tracing & OpenTelemetry
#
# Pinned to match init-tracing-opentelemetry's (the app-side setup crate most
# consumers use) opentelemetry/tracing-opentelemetry versions. If these drift
# apart, Cargo resolves two separate copies of `opentelemetry` in the same
# binary; getitdone's `opentelemetry::global::meter()`/tracer calls then land
# in an orphaned registry that the app's actual pipeline never configures --
# spans/logs still work (they ride on the unified `tracing` crate instead),
# but metrics and span-linking silently become no-ops with no error anywhere.
tracing = { version = "0", optional = true }
opentelemetry = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
opentelemetry-otlp = { version = "=0.31.0", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "=0.31.0" }
opentelemetry_sdk = { version = "=0.31.0", features = ["rt-tokio", "testing"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
unused_must_use = "warn"
missing_debug_implementations = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
