[package]
name = "getitdone"
version = "0.2.6"
edition = "2024"
authors = ["Qiao Runtao <qiaoruntao@example.com>"]
description = "Experimenting with a simple Mongo-backed caller/worker bridge that keeps tracing context alive."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qiaoruntao/getitdone"
repository = "https://github.com/qiaoruntao/getitdone"
documentation = "https://docs.rs/getitdone"
keywords = ["mongodb", "worker", "async", "tracing"]
categories = ["asynchronous", "database", "concurrency"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE*", "examples/**/*.rs"]

[features]
default = ["tracing"]
tracing = [
    "dep:tracing",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry"
]

[dependencies]
# Core
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
futures-util = "0.3"

# MongoDB & Storage
mongodb = { version = "3", default-features = false, features = ["compat-3-3-0", "bson-3", "rustls-tls", "dns-resolver", "zstd-compression", "snappy-compression", "zlib-compression"] }
bson = { version = "3", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Optional Tracing & OpenTelemetry
#
# Kept as loose "0" requirements (like `tracing` below), not pinned to a
# specific minor version: getitdone should unify with whatever exact 0.x
# version the consuming app's own OTel setup resolves to, not force its own.
# A tight pin (e.g. "0.31") works only until the app upgrades again -- Cargo
# then resolves two separate copies of `opentelemetry` in the same binary,
# and getitdone's `opentelemetry::global::meter()`/tracer calls silently land
# in an orphaned registry that the app's real pipeline never configures.
# Spans/logs are unaffected either way since they ride on the `tracing` crate,
# which already unifies fine; only metrics and span-linking are at risk.
tracing = { version = "0", optional = true }
opentelemetry = { version = "0", optional = true }
tracing-opentelemetry = { version = "0", optional = true }

[dev-dependencies]
# Dev-only (doesn't affect consumers' dependency graphs), so pinned exactly
# for reproducible test/example builds.
opentelemetry-otlp = { version = "=0.31.0", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "=0.31.0" }
opentelemetry_sdk = { version = "=0.31.0", features = ["rt-tokio", "testing"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
unused_must_use = "warn"
missing_debug_implementations = "warn"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
